Это наш второй комит

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Добрый картон</title>
+	<title>good cardboard</title>
 </head>
 <body>
 
